<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTimeElapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="@string/zero_clock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnRun"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeElapsed" />

        <Button
            android:id="@+id/btnRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_run"
            app:layout_constraintStart_toEndOf="@+id/btnReset"
            app:layout_constraintEnd_toStartOf="@+id/btnStop"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeElapsed" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_stop"
            app:layout_constraintStart_toEndOf="@+id/btnRun"
            app:layout_constraintEnd_toStartOf="@+id/btnLap"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeElapsed" />

        <Button
            android:id="@+id/btnLap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_lap"
            app:layout_constraintStart_toEndOf="@+id/btnStop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeElapsed" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/svScroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/llLaps"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="vertical"/>
    </ScrollView>
</LinearLayout>